cto/examples/valid/transaction.cto.ipt
modelUnit
 namespaceDeclaration
  namespace
  qualifiedName
   org
   .
   sample
   .
   trasaction
 importDeclaration
  import
  qualifiedName
   org
   .
   sample
   .
   car
  .
  *
 typeDeclaration
  transactionDeclaration
   transaction
   Buy
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      reference
       --> 
       Car
      identifier
       asset
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       newValue
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       foo
    classBodyDeclaration
     fieldDeclaration
      numericField
       o 
       numericPrimitive
        Integer
      identifier
       bar
    }
 typeDeclaration
  eventDeclaration
   event
   SampleEvent
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      reference
       --> 
       Car
      identifier
       asset
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       oldValue
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       newValue
    }
 <EOF>
